--- a/Camel/Camel-WMQ-AMQ-XA-TX/routing/pom.xml
+++ b/Camel/Camel-WMQ-AMQ-XA-TX/routing/pom.xml
@@ -20,7 +20,8 @@
       *
     </servicemix.osgi.import>
     <servicemix.osgi.export>
-      org.apache.camel.demo.camel_wmq_amq_xa_tx
+      org.apache.camel.demo.camel_wmq_amq_xa_tx,
+      org.springframework.jms.connection.xa
     </servicemix.osgi.export>
     <servicemix.osgi.bundles />
     <servicemix.osgi.dynamic.import />
@@ -46,6 +47,13 @@
       <groupId>org.apache.activemq</groupId>
       <artifactId>activemq-pool</artifactId>
       <version>${activemq.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-jms</artifactId>
+        <version>3.2.4.RELEASE</version>
+        <type>jar</type>
+        <scope>compile</scope>
     </dependency>
   </dependencies>
 
