--- a/ServiceMix/OSGiServiceLoadingResourcesFromExternalBundle/clientBundle/pom.xml
+++ b/ServiceMix/OSGiServiceLoadingResourcesFromExternalBundle/clientBundle/pom.xml
@@ -22,18 +22,8 @@
     <dependency>
       <groupId>org.apache.karaf.test.service-resource-loading-example</groupId>
       <artifactId>service-bundle</artifactId>
-      <version>0.0.1-SNAPSHOT</version>
+      <version>${project.version}</version>
       <scope>compile</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.osgi</groupId>
-      <artifactId>org.osgi.enterprise</artifactId>
-      <version>4.2.0</version>
-    </dependency>
-    <dependency>
-      <groupId>org.osgi</groupId>
-      <artifactId>org.osgi.core</artifactId>
-      <version>4.2.0</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
