--- a/Camel/Camel-JMS-JDBC-XA-TX/routing/pom.xml
+++ b/Camel/Camel-JMS-JDBC-XA-TX/routing/pom.xml
@@ -16,6 +16,8 @@
   <version>2.0.0</version>
 
     <properties>
+        <tomcat-jdbc.version>7.0.37</tomcat-jdbc.version>
+        <juli.version>6.0.36</juli.version>
         <servicemix.osgi.import>
             *
         </servicemix.osgi.import>
