Adding Camel-HornetQ-AMQ demo to top level Camel README.md

--- a/Camel/Camel-WMQ-AMQ-XA-TX/routing/pom.xml
+++ b/Camel/Camel-WMQ-AMQ-XA-TX/routing/pom.xml
@@ -29,6 +29,12 @@
 
   <dependencies>
     <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-jms</artifactId>
+      <version>3.2.8.RELEASE</version>
+    </dependency>
+
+    <dependency>
       <groupId>org.apache.camel</groupId>
       <artifactId>camel-core</artifactId>
       <version>${camel.version}</version>
