--- a/Camel/Camel-JMS-JDBC/routing/pom.xml
+++ b/Camel/Camel-JMS-JDBC/routing/pom.xml
@@ -6,18 +6,17 @@
   <parent>
     <groupId>org.apache.camel.demo</groupId>
     <artifactId>camel-jms-jdbc</artifactId>
-    <version>1.0.0</version>
+    <version>2.0.0</version>
   </parent>
 
   <groupId>org.apache.camel.demo.camel-jms-jdbc</groupId>
   <artifactId>routing</artifactId>
   <packaging>bundle</packaging>
   <name>Camel :: Demo :: Camel-JMS-JDBC :: Routing</name>
-  <version>1.0.0</version>
 
     <properties>
         <servicemix.osgi.import>
-            *
+            *, javax.sql
         </servicemix.osgi.import>
         <servicemix.osgi.export>
             org.apache.camel.demo.camel_jms_jdbc
@@ -27,11 +26,6 @@
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>org.apache.camel</groupId>
-            <artifactId>camel-core</artifactId>
-            <version>${camel.version}</version>
-        </dependency>
         <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-spring</artifactId>
@@ -82,13 +76,13 @@
             <version>${juli.version}</version>
             <scope>provided</scope>
         </dependency>
--->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>${mysql.version}</version>
             <scope>provided</scope>
         </dependency>
+-->
     </dependencies>
 
     <build>
