--- a/Camel/Camel-JMS-JDBC-XA-TX/datasource/pom.xml
+++ b/Camel/Camel-JMS-JDBC-XA-TX/datasource/pom.xml
@@ -52,7 +52,7 @@
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
-      <version>5.1.17</version>
+      <version>${mysql.version}</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
