add compiler level and encoding props

--- a/Camel/Camel-JMS-JDBC-XA-TX/pom.xml
+++ b/Camel/Camel-JMS-JDBC-XA-TX/pom.xml
@@ -9,6 +9,10 @@
     <packaging>pom</packaging>
 
     <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <camel.version>2.17.0.redhat-630371</camel.version>
         <amq.version>5.11.0.redhat-630371</amq.version>
         <mysql.version>5.1.27</mysql.version>
@@ -27,12 +31,6 @@
           <groupId>org.apache.felix</groupId>
           <artifactId>maven-bundle-plugin</artifactId>
           <version>3.3.0</version>
-          <extensions>true</extensions>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.0</version>
           <extensions>true</extensions>
         </plugin>
       </plugins>
