small modification to comment in pom.xml of Camel-Zipkin-Hawkular demo

--- a/Camel/Camel-Zipkin-Hawkular/client/pom.xml
+++ b/Camel/Camel-Zipkin-Hawkular/client/pom.xml
@@ -29,7 +29,7 @@
 
   <artifactId>camel-example-zipkin-hawkular-client</artifactId>
   <name>Camel :: Example :: Zipkin :: Client</name>
-  <description>An example showing how to trace incoming and outgoing messages from Camel with Zipkin</description>
+  <description>An example showing how to trace incoming and outgoing messages from Camel with Zipkin to Hawkular</description>
 
   <!-- import Camel BOM -->
   <dependencyManagement>
