--- a/Camel/Camel-JMS-JDBC-XA-TX/pom.xml
+++ b/Camel/Camel-JMS-JDBC-XA-TX/pom.xml
@@ -1,24 +1,37 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>org.apache.camel.demo</groupId>
-    <artifactId>camel-jms-jdbc-xa</artifactId>
-    <version>2.2.0</version>
-    <name>Camel :: Demo :: Camel-JMS-JDBC-XA-TX </name>
-    <packaging>pom</packaging>
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>org.apache.camel.demo</groupId>
+  <artifactId>camel-jms-jdbc-xa</artifactId>
+  <version>2.2.0</version>
+  <name>Camel :: Demo :: Camel-JMS-JDBC-XA-TX </name>
+  <packaging>pom</packaging>
 
-    <properties>
-        <camel.version>2.17.0.redhat-630187</camel.version>
-        <amq.version>5.11.0.redhat-630187</amq.version>
-        <mysql.version>5.1.27</mysql.version>
-    </properties>
+  <properties>
+<!--         <camel.version>2.17.0.redhat-630187</camel.version> -->
+<!--         <amq.version>5.11.0.redhat-630187</amq.version> -->
+    <mysql.version>5.1.27</mysql.version>
+  </properties>
 
-    <modules>
-        <module>features</module>
-        <module>datasource</module>
-        <module>routing</module>
-    </modules>
+
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.jboss.fuse.bom</groupId>
+        <artifactId>jboss-fuse-parent</artifactId>
+        <version>6.3.0.redhat-416</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
+
+  <modules>
+    <module>features</module>
+    <module>datasource</module>
+    <module>routing</module>
+  </modules>
 
   <build>
     <pluginManagement>
