--- a/Camel/Camel-JMS-JDBC-XA-TX/routing/pom.xml
+++ b/Camel/Camel-JMS-JDBC-XA-TX/routing/pom.xml
@@ -17,9 +17,7 @@
     <properties>
         <tomcat-jdbc.version>7.0.37</tomcat-jdbc.version>
         <juli.version>6.0.36</juli.version>
-        <servicemix.osgi.import>
-            *
-        </servicemix.osgi.import>
+        <servicemix.osgi.import>*</servicemix.osgi.import>
         <servicemix.osgi.export>
             org.apache.camel.demo.camel_jms_jdbc_xa
         </servicemix.osgi.export>
@@ -31,29 +29,24 @@
         <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-core</artifactId>
-            <version>${camel.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-spring</artifactId>
-            <version>${camel.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-jms</artifactId>
-            <version>${camel.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-jdbc</artifactId>
-            <version>${camel.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-sql</artifactId>
-            <version>${camel.version}</version>
             <scope>provided</scope>
         </dependency>
 
